--- a/app/src/main/res/drawable-v24/gradient.xml
+++ b/app/src/main/res/drawable-v24/gradient.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
-    <corners
-        android:radius="20dp"/>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <stroke android:color="@color/colorPrimary"
-        android:width="1dp"/>
-</shape>
+    <item android:bottom="2dp">
+        <shape>
+            <stroke android:width="1dp" android:color="#BBBBBB" />
+            <solid android:color="#FFFFFF"/>
+            <corners android:radius="20dp" />
+        </shape>
+    </item>
+
+</layer-list>
