--- a/app/src/main/res/layout/fragment_dialog_detail.xml
+++ b/app/src/main/res/layout/fragment_dialog_detail.xml
@@ -6,7 +6,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:background="#E8E8E8"
         android:focusable="true"
         android:focusableInTouchMode="true"
@@ -20,18 +20,29 @@
             android:background="@color/colorPrimary"
             android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/tvNewRecipe"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:gravity="start"
-                android:padding="16dp"
-                android:paddingBottom="7dp"
-                android:paddingTop="7dp"
-                android:text="@string/detail_recipe"
-                android:textColor="@android:color/white"
-                android:textSize="16sp"
-                android:textStyle="bold" />
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginEnd="16dp"
+                    android:src="@drawable/ic_word" />
+
+                <TextView
+                    android:id="@+id/tvNewWord"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="16dp"
+                    android:paddingBottom="7dp"
+                    android:paddingTop="7dp"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
 
             <ImageView
                 android:id="@+id/btnClose"
