--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,10 +9,11 @@
     </style>
 
     <style name="FloatLabelEditTextStyle" parent="android:Widget.EditText">
-        <item name="android:textColor">@color/colorPrimary</item>
+        <item name="android:textColor">@color/black_01</item>
         <item name="android:textColorHint">@color/colorAccent</item>
         <item name="android:textSize">12sp</item>
         <item name="android:singleLine">true</item>
+        <item name="android:textStyle">italic</item>
         <item name="android:background">@null</item>
         <item name="android:paddingTop">2dp</item>
     </style>
