--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".view.activities.main.MainActivity">
+    tools:context="com.tienganh.vocabulary.view.activities.main.MainActivity">
 
     <LinearLayout
         android:id="@+id/layout"
