--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,10 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="DialogTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowTranslucentStatus">true</item>
+    </style>
+
     <style name="FloatLabelEditTextStyle" parent="android:Widget.EditText">
         <item name="android:textColor">@color/black_01</item>
         <item name="android:textColorHint">@color/colorAccent</item>
